getting the model and EF ghoing

--- a/LMS/appsettings.json
+++ b/LMS/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SqlConfiguration": {
+    "LMSConnectionString": "Server=sqldata;Database=LMS;User Id=SA;Password=!23qweASD;MultipleActiveResultSets=true;"
+  }
 }
