--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 services:
-  data:
+  sqldata:
     image: microsoft/mssql-server-windows-developer 
     environment:
         - ACCEPT_EULA=Y
@@ -14,5 +14,5 @@ services:
       context: .
       dockerfile: LMS\Dockerfile
     depends_on:
-     - data
+      - sqldata
   
