--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,13 +1,13 @@
 version: '3.4'
 
 services:
-  lms:
+  lms.ui:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - "53573:80"
-      - "44380:443"
+      - "36883:80"
+      - "44355:443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:C:\Users\ContainerUser\AppData\Roaming\Microsoft\UserSecrets:ro
       - ${APPDATA}/ASP.NET/Https:C:\Users\ContainerUser\AppData\Roaming\ASP.NET\Https:ro
